test_regress/t/t_class_virtual.out
%Error-UNSUPPORTED: t/t_class_virtual.v:7:9: Unsupported: virtual class
    7 | virtual class VC;
      |         ^~~~~
%Error: Exiting due to
